# docling-ocr-lib

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: plan.md
src/docling_ocr/: __init__.py  annotator.py  cli.py  converter.py  exceptions.py  image_utils.py  markdown.py  models.py  pipeline.py  vlm_annotator.py
src/docling_ocr/storage/: base.py  local.py  paths.py  s3.py
tests/: test_cli.py  test_image_utils.py  test_markdown.py  test_models.py  test_pipeline_page_preview.py  test_storage.py  test_vlm_annotator.py
